log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: logs
          emptyDir: {}
        - name: config
          configMap:
            name: hashgenerator-config
            items:
              - key: "information.txt"
                path: "information.txt"
      containers:
        - name: hashgenerator-reader
          image: PROJECT/READER_IMAGE
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /readyz
              port: 5607
          volumeMounts:
            - name: logs
              mountPath: /data
            - name: config
              mountPath: /config
              readOnly: true
        - name: hashgenerator-writer
          image: PROJECT/WRITER_IMAGE
          volumeMounts:
            - name: logs
              mountPath: /data
