log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hashgenerator-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 5607
