log_output/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hashgenerator-route
  namespace: exercises
spec:
  parentRefs:
  - name: the-gateway
    namespace: project
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /status
    backendRefs:
    - name: hashgenerator-svc
      port: 2345
